--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,8 @@
 {
   "name": "Smart Notes",
-  "human_version": "2.14.0",
-  "package": 1531888719
+  "package": "smart_notes",
+  "version": "2.15.0",
+  "author": "Adnan Ahmed Khan",
+  "homepage": "https://github.com/adnahmed/anki-smart-notes"
 }
+
